Add some tests and update api
Signed-off-by: Chris Frank <chris@cfrank.org>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
-add_sroc_test(test-test
-    SOURCES test-test.c
+add_sroc_test(test-creation
+    SOURCES test-creation.c
     LINK_LIBRARIES
         ${CMOCKA_SHARED_LIBRARY}
         sroc
-    TEST_NAME TestTest
+    TEST_NAME TestCreation
 )
