Add string util test and fix include
Signed-off-by: Chris Frank <chris@cfrank.org>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,3 +5,11 @@ add_sroc_test(test-creation
         sroc
     TEST_NAME TestCreation
 )
+
+add_sroc_test(test-string-util
+    SOURCES test-string-util.c
+    LINK_LIBRARIES
+        ${CMOCKA_SHARED_LIBRARY}
+        sroc
+    TEST_NAME TestStringUtil
+)
