Start parsing file
Add root creation function
Add parse file/string functions (WIP)
Add string_helpers
 - string_get_delimiter
 - string_get_line
Add unit tests for string_helper (WIP)

Signed-off-by: Chris Frank <chris@cfrank.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,8 +36,8 @@ option(ENABLE_TESTING "Enable automated testing" OFF)
 
 add_library(sroc SHARED
     src/sroc.c
-    src/util.c
-    src/util.h
+    src/string_helper.h
+    src/string_helper.c
 )
 
 add_library(SROC::sroc ALIAS sroc)
