--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,15 +1,15 @@
 add_sroc_test(test-creation
-    SOURCES test-creation.c
+    SOURCES test_creation.c
     LINK_LIBRARIES
         ${CMOCKA_SHARED_LIBRARY}
         sroc
     TEST_NAME TestCreation
 )
 
-add_sroc_test(test-string-util
-    SOURCES test-string-util.c
+add_sroc_test(test-string-helper
+    SOURCES test_string_helper.c
     LINK_LIBRARIES
         ${CMOCKA_SHARED_LIBRARY}
         sroc
-    TEST_NAME TestStringUtil
+    TEST_NAME TestStringHelper
 )
